--- a/HumbleBragWOS/app/src/main/res/values/colors.xml
+++ b/HumbleBragWOS/app/src/main/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="tab_indicator">#468fd7</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
 
 </resources>
