--- a/HumbleBragWOS/app/src/main/res/values/colors.xml
+++ b/HumbleBragWOS/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="tab_indicator">#468fd7</color>
     <color name="white">#ffffff</color>
+    <color name="grey">#979aac</color>
     <color name="black">#000000</color>
 
 </resources>
