--- a/HumbleBragWOS/app/src/main/res/values/colors.xml
+++ b/HumbleBragWOS/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="white">#ffffff</color>
     <color name="grey">#979aac</color>
     <color name="black">#000000</color>
+    <color name="twitter_blue">#3b94da</color>
 
 </resources>
