--- a/HumbleBragWOS/app/src/main/res/layout/activity_get_tweets.xml
+++ b/HumbleBragWOS/app/src/main/res/layout/activity_get_tweets.xml
@@ -5,12 +5,21 @@
     android:layout_height="match_parent"
     tools:context="com.statusbrew.chetsachdeva.humblebragwos.get_tweets.GetTweetsActivity">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar_with_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_tweets"
+        android:layout_below="@id/toolbar"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="visible"/>
+        android:layout_height="match_parent" />
+
 
 
 </RelativeLayout>
