--- a/HumbleBragWOS/app/src/main/res/layout/full_screen_image.xml
+++ b/HumbleBragWOS/app/src/main/res/layout/full_screen_image.xml
@@ -7,6 +7,7 @@
     <com.statusbrew.chetsachdeva.humblebragwos.widgets.zoomableFrescoImageView.zoomable.ZoomableDraweeView
         android:id="@+id/sdv_Image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        />
 
 </RelativeLayout>
