--- a/HumbleBragWOS/app/src/main/res/values/dimens.xml
+++ b/HumbleBragWOS/app/src/main/res/values/dimens.xml
@@ -16,6 +16,7 @@
     <dimen name="text_20">20sp</dimen>
     <dimen name="text_16">16sp</dimen>
     <dimen name="text_12">12sp</dimen>
+    <dimen name="text_14">14sp</dimen>
     <dimen name="text_8">8sp</dimen>
     <dimen name="text_4">4sp</dimen>
 
